👾 Add favicon and title

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>近日公開 - AwareShe</title>
+    <link rel="icon" type="image/png" href="../../public/AwareShe.png">
+    <title>AwareShe</title>
   </head>
 
   <body>
